fixed icon alignment

--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: calc(100vh - 20rem);
     list-style-type: none;
+    min-height: calc(100vh - 20rem);
 
     @media screen and (max-width: 500px) {
         margin-top: 8rem;
@@ -18,7 +18,6 @@
         display: block;
         font-size: 3rem;
         font-weight: 300;
-        // text-transform: uppercase;
         text-decoration: none;
         margin: 1rem 0;
 
@@ -44,8 +43,8 @@
         a,
         a:visited,
         a:visited {
-            padding: 1rem 2rem;
             display: block;
+            padding: 1rem 2rem;
             text-decoration: none;
             color: black;
         }
@@ -54,6 +53,7 @@
             width: 25px;
             height: 25px;
             margin-right: 2rem;
+            transform: translateY(3px);
         }
     }
 }
